拖拽项目支持国际化 # Reviewed, transaction id: 8161

--- a/lib/server/project-template/vue3/project-init-code/package.json
+++ b/lib/server/project-template/vue3/project-init-code/package.json
@@ -130,6 +130,7 @@
     "eslint-plugin-vue": "~7.6.0",
     "fs-extra": "^8.1.0",
     "jsonp": "~0.2.1",
+    "js-cookie": "3.0.1",
     "koa": "~2.8.2",
     "koa-body": "^4.2.0",
     "koa-bodyparser": "~4.2.1",
@@ -168,6 +169,7 @@
     "vue": "~3.2.41",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-fullscreen": "^2.6.1",
+    "vue-i18n": "^9.0.0",
     "vue-json-viewer": "^2.2.22",
     "vue-router": "~4.1.6",
     "vuex": "^4.1.0",
